example/lib/src/arbs/errors/app_id.arb
{
  "@@locale": "id",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "Terjadi kesalahan",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Terjadi kesalahan yang tidak terduga",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Laporan bug berhasil dikirim.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}